# DeepPigeonChess

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  appveyor.yml  references.txt
bib/: positions.txt  references.txt
src/: board.cpp  board.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  main.cpp  mover.cpp  mover.h  timing.cpp  timing.h  uci.cpp  uci.h  utilities.cpp  utilities.h
tests/: board_test.cpp
